cases/network-extensions/cilium/multi-cluster/playground/manifest/acme/app/complains-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acme
  namespace: complains-app
spec:
  ingressClassName: "nginx"
  rules:
  - host: acme.fury.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: complains-app-service
            port:
              number: 80
  tls:
  - hosts:
    - acme.fury.info
